# Simple_AI_Gomoku

./: CMakeLists.txt  README.md
include/: PiskvorkLinker.hpp
src/: PiskvorkLinker.cpp  main.cpp
